# bibsane

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  DEVELOPMENT.md  HEADER  README.md  bibsane.py  exampleconfig.yaml  pyproject.toml
.github/workflows/: pypi.yaml
src/bibsane/: __init__.py  __main__.py
