[build-system]
requires = ["setuptools>=65.0", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BibSane"
authors = [
  { name="Toon Verstraelen", email="toon.verstraelen@ugent.be" },
]
description = "Sanitize BibTeX files without going insane"
readme = "README.md"
license = {file = "COPYING"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "bibtexparser",
    "PyYAML",
    "attrs",
    "cattrs",
]
dynamic = ["version"]

[project.urls]
Issues = "https://github.com/reproducible-reporting/bibsane/issues"
Source = "https://github.com/reproducible-reporting/bibsane/"
Changelog = "https://github.com/reproducible-reporting/bibsane/blob/main/CHANGELOG.md"

[project.scripts]
bibsane = "bibsane:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
select = ["E", "F", "UP", "B", "I", "PGH", "PL", "RUF"]
line-length = 100
target-version = "py310"
ignore = ["PLR2004", "PLR0913", "PLR0912", "PLW2901", "PLR0915"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
